--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   }
   
   header {
-    background-color: #7f5539;
+    background-color: #70c1cf;
     color: #fff;
     padding: 10px 20px;
     display: flex;
@@ -129,7 +129,7 @@ body {
   }
 
   footer {
-    background-color: #ddb892;
+    background-color: #70c1cf;
     color: #000000;
     padding: 6px 12px;
     position: fixed;
